@@ -40,6 +40,7 @@
 			</thead>
 			<tfoot>
 				<tr id="spaceAveragePower"><th>Space AvgP</th></tr>
+				<tr id="groundAveragePower"><th>Ground AvgP</th></tr>
 				<tr id="buildCosts"><th>Build Costs</th></tr>
 				<tr id="upkeepCosts"><th>Upkeep Costs</th></tr>
 				<tr id="timeToBuild"><th>Time to build</th></tr>
