@@ -5,6 +5,7 @@ XXXX-XX-XX XX:XX:XX Version 0.0.6
 * Added Cache Overview
 * Added Update cache with browsing content
 * Added landing date/time and auto-drop information to table of incoming fleets
+* Added Ground Armies and Carried Armies to Fleet Calculator
 
 2013-11-26 21:09:43 Version 0.0.5
 * Added changelog
